--- a/style.css
+++ b/style.css
@@ -1,11 +1,44 @@
+.gameplay {
+    border: 2px black solid;
+    border-radius: 10px;
+    padding: 50px;
+    width: 500px;
+    margin: auto;
+    transform: translate(0, 30%);
+    background-color: white;
+    text-align: center;
+}
+
+body {
+    background-image: url(playground.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+h1 {
+    color: black;
+}
+
+p {
+    margin: 20px;
+    font-size: 20px;
+}
+
 table, tr, td {
     border: 1px solid white;
     border-collapse: collapse;
+    border-radius: 5px;
     padding: 10px;
-    margin: 10px
+    margin: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Orbitron', sans-serif;
+    
 }
 
 tr, td {
-    background-color: darkcyan;
+    background-color: black;
     text-align: center;
+    color: white;
+    font-size: 20px;
 }
